# Grant-Doctor-Mapping

./: AuthorDoctorEntityResolver.py  README.md  pyproject.toml
Program Files/: npi_grants_combine.py
Program Files/database/: grant_doc_db.py  grant_doc_db_creation.py
Program Files/distance_classifier/: data_simulator.py  distance_features.py  name_distance.py
Program Files/grants_processing/: read_grants_data.py
Program Files/npi_processing/: npi_reader.py
Program Files/scripts/: predict_matches.py  train_distance_classifier.py
program_files/: npi_grants_combine.py
program_files/database/: bridge_insertion.py  bridge_table_insertion.py  bridges_table_insertion.sql  bridges_table_insertion_sql.sql  grant_doc_db.py  grant_doc_db_creation.py  pull_data.py
program_files/distance_classifier/: data_simulator.py  distance_classifier.py  distance_features.py  name_distance.py
program_files/grants_processing/: read_grants_data.py
program_files/npi_processing/: npi_reader.py
program_files/scripts/: predict_matches.py  train_distance_classifier.py
program_files/trained_model/: distance_classifier_metadata.json
program_files/trained_model_artifacts/: distance_classifier.json
