[tool.poetry]
name = "grant-doctor-mapping-1"
version = "0.1.0"
description = ""
authors = ["jakem <mazurkiewiczj@duq.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.1"
sqlalchemy = "^2.0.28"
scikit-learn = "^1.4.1.post1"
xgboost = "^2.0.3"
jarowinkler = "^2.0.1"
fasttext = {git = "https://github.com/cfculhane/fastText"}
sentence-transformers = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
